# py_multinet

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: package.yml
