[build-system]
requires = ["setuptools","cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "uunet"
version= "2.1.1"
authors = [
    {name = "Matteo Magnani", email = "matteo.magnani@it.uu.se"}
]
description = "Python porting of the multinet library"
readme = "DESCRIPTION.md"
requires-python = ">=3.8"
keywords = ["network analysis","multilayer"]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "networkx",
    "matplotlib"
]

[options]
include_package_data = "true"
zip_safe = "true"

[project.urls]
homepage = "https://github.com/uuinfolab/py_multinet"

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"

Use delvewheel on windows
[tool.cibuildwheel.windows]
before-build = [
    "pip install delvewheel",
    "if exist build rmdir /s /q build",
]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
